tests/errors/space_after_semicolon.php
<?php

declare(strict_types=1);

$a = 12;      $b = 13;
